Fix grid error on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -99,9 +99,12 @@
     }
 
     .container {
-        grid-template-areas: "left" "right";
         padding: 1rem;
         height: 100%;
+    }
+
+    .landing {
+        grid-template-areas: "left" "right";
     }
 
     .title {
